--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -72,7 +72,49 @@
   "profile_confirm_title": "Are you sure?",
   "profile_confirm_message": "Once you create your profile, you won't be able to change your name or birthdate again. Please make sure everything is correct.",
   "profile_confirm_yes": "Yes, Create Profile",
-  "profile_confirm_cancel": "Cancel"
+  "profile_confirm_cancel": "Cancel",
+
+  "scan_tab": "Scan",
+  "scanner_permission_text": "We need both Camera and Location permissions to verify you are at the recycling bin.",
+  "scanner_permission_camera": "Camera permission is required to scan barcodes.",
+  "grant_camera_permission": "Grant Camera Permission",
+  "grant_location_permission": "Grant Location Permission",
+  "scan_hint_idle": "Point at QR code & tap below",
+  "scan_hint_scanning": "Scanning... Tap to cancel",
+  "scan_hint_gps_disabled": "GPS Disabled - Cannot Scan",
+  "scan_button": "SCAN",
+  "scan_button_stop": "STOP",
+  "location_services_disabled_title": "Location Services Disabled",
+  "location_services_disabled_message": "You must turn on your device location (GPS) to verify the bin.",
+  "open_settings": "Open Settings",
+  "gps_error": "GPS Error",
+  "gps_error_message": "Please stand still and try again.",
+  "weak_signal_title": "Weak Signal",
+  "weak_signal_message": "GPS accuracy is low. Please wait a moment for a better signal.",
+  "session_start_error": "Failed to start session. Please try again.",
+  "network_error": "Network Error",
+  "network_error_message": "Could not verify bin location.",
+
+  "connected_to": "Connected to:",
+  "session_expired_title": "Session Expired",
+  "session_expired_message": "Your time at this bin has ended.",
+  "barcode_hint_idle": "Point at barcode & tap below",
+  "barcode_hint_scanning": "Scanning... Tap to cancel",
+  "duplicate_warning": "Duplicate item! Take a group photo to unlock.",
+  "duplicate_alert_title": "Duplicate Detected!",
+  "duplicate_alert_text": "Take a photo of ALL items together.",
+  "recycled_success": "Recycled: {{item}}\n+{{points}} Points",
+  "recycled_pending": "Recycled: {{item}}\n(Pending Review)",
+  "photo_proof_required": "Photo proof required.",
+  "submit_failed": "Failed to submit item.",
+  "network_error_retry": "Network error. Please try again.",
+  "upload_unlock": "Upload & Unlock",
+  "proof_uploaded": "Proof uploaded! Unlimited scanning unlocked.",
+  "upload_failed": "Upload failed.",
+  "upload_failed_retry": "Upload failed. Please try again.",
+  "photo_capture_failed": "Failed to capture photo.",
+  "ok": "OK",
+  "cancel": "Cancel",
+  "session_ended_success": "Session ended.",
+  "session_end_failed": "Failed to end session."
 }
-
-
