--- a/i18n/locales/tr.json
+++ b/i18n/locales/tr.json
@@ -72,7 +72,49 @@
   "profile_confirm_title": "Emin misiniz?",
   "profile_confirm_message": "Profilinizi oluşturduktan sonra adınızı veya doğum tarihinizi bir daha değiştiremezsiniz. Lütfen her şeyin doğru olduğundan emin olun.",
   "profile_confirm_yes": "Evet, Profil Oluştur",
-  "profile_confirm_cancel": "İptal"
+  "profile_confirm_cancel": "İptal",
+
+  "scan_tab": "Tara",
+  "scanner_permission_text": "Geri dönüşüm kutusunda olduğunuzu doğrulamak için hem Kamera hem de Konum izinlerine ihtiyacımız var.",
+  "scanner_permission_camera": "Barkodları taramak için kamera izni gereklidir.",
+  "grant_camera_permission": "Kamera İzni Ver",
+  "grant_location_permission": "Konum İzni Ver",
+  "scan_hint_idle": "QR koduna doğrultun ve aşağıya dokunun",
+  "scan_hint_scanning": "Taranıyor... İptal etmek için dokunun",
+  "scan_hint_gps_disabled": "GPS Devre Dışı - Tarama Yapılamıyor",
+  "scan_button": "TARA",
+  "scan_button_stop": "DUR",
+  "location_services_disabled_title": "Konum Hizmetleri Devre Dışı",
+  "location_services_disabled_message": "Kutuyu doğrulamak için cihazınızın konumunu (GPS) açmalısınız.",
+  "open_settings": "Ayarları Aç",
+  "gps_error": "GPS Hatası",
+  "gps_error_message": "Lütfen sabit durun ve tekrar deneyin.",
+  "weak_signal_title": "Zayıf Sinyal",
+  "weak_signal_message": "GPS doğruluğu düşük. Lütfen daha iyi bir sinyal için bir an bekleyin.",
+  "session_start_error": "Oturum başlatılamadı. Lütfen tekrar deneyin.",
+  "network_error": "Ağ Hatası",
+  "network_error_message": "Kutu konumu doğrulanamadı.",
+
+  "connected_to": "Bağlı:",
+  "session_expired_title": "Oturum Süresi Doldu",
+  "session_expired_message": "Bu kutudaki süreniz sona erdi.",
+  "barcode_hint_idle": "Barkoda doğrultun ve aşağıya dokunun",
+  "barcode_hint_scanning": "Taranıyor... İptal etmek için dokunun",
+  "duplicate_warning": "Tekrarlanan ürün! Kilidi açmak için grup fotoğrafı çekin.",
+  "duplicate_alert_title": "Tekrar Tespit Edildi!",
+  "duplicate_alert_text": "TÜM ürünlerin birlikte fotoğrafını çekin.",
+  "recycled_success": "Geri dönüştürüldü: {{item}}\n+{{points}} Puan",
+  "recycled_pending": "Geri dönüştürüldü: {{item}}\n(İnceleme Bekliyor)",
+  "photo_proof_required": "Fotoğraf kanıtı gerekli.",
+  "submit_failed": "Ürün gönderilemedi.",
+  "network_error_retry": "Ağ hatası. Lütfen tekrar deneyin.",
+  "upload_unlock": "Yükle ve Kilidi Aç",
+  "proof_uploaded": "Kanıt yüklendi! Sınırsız tarama açıldı.",
+  "upload_failed": "Yükleme başarısız.",
+  "upload_failed_retry": "Yükleme başarısız. Lütfen tekrar deneyin.",
+  "photo_capture_failed": "Fotoğraf çekilemedi.",
+  "ok": "Tamam",
+  "cancel": "İptal",
+  "session_ended_success": "Oturum sonlandırıldı.",
+  "session_end_failed": "Oturum sonlandırılamadı."
 }
-
-
