--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -1,4 +1,157 @@
 {
-  "welcome": "Bienvenido a la aplicación de incentivos de reciclaje",
-  "change_language": "Cambiar idioma"
+  "welcome": "Bienvenido a la App de Incentivos de Reciclaje",
+  "welcome_title": "Recicla y Gana",
+  "welcome_subtitle": "Únete a nuestra comunidad y comienza a ganar recompensas por tus esfuerzos de reciclaje.",
+  "get_started": "Comenzar",
+  "change_language": "Cambiar Idioma",
+  "internet_back": "¡Volvió el internet!",
+  "still_no_connection": "Aún sin conexión.",
+  "error_checking_connection": "Error al comprobar la conexión.",
+  "no_internet_title": "Sin Conexión a Internet",
+  "no_internet_message": "Por favor, verifica tu configuración de red e inténtalo de nuevo.",
+  "try_again": "Intentar de nuevo",
+  "retry": "Reintentar",
+  "service_unavailable_title": "Servicio No Disponible",
+  "service_unavailable_message": "Nuestros servidores no están disponibles actualmente. Por favor, inténtalo más tarde.",
+
+  "login_title": "Bienvenido de nuevo",
+  "login_subtitle": "Inicia sesión en tu cuenta",
+  "login_button": "Iniciar Sesión",
+  "login_success": "¡Inicio de sesión exitoso!",
+  "login_failed": "Correo electrónico o contraseña inválidos.",
+  "login_error": "Ocurrió un error. Por favor, inténtalo de nuevo.",
+  "login_link": "Iniciar Sesión",
+
+  "register_title": "Crear Cuenta",
+  "register_subtitle": "Únete a la comunidad de reciclaje",
+  "register_button": "Crear Cuenta",
+  "register_success": "¡Cuenta creada exitosamente!",
+  "register_failed": "El registro falló. Por favor, inténtalo de nuevo.",
+  "register_error": "Ocurrió un error. Por favor, inténtalo de nuevo.",
+  "register_link": "Crear Cuenta",
+
+  "email_placeholder": "Correo electrónico",
+  "password_placeholder": "Contraseña",
+  "confirm_password_placeholder": "Confirmar contraseña",
+  "fill_all_fields": "Por favor, completa todos los campos.",
+  "passwords_not_match": "Las contraseñas no coinciden.",
+  "no_account": "¿No tienes una cuenta?",
+  "have_account": "¿Ya tienes una cuenta?",
+
+  "validation_email_required": "El correo electrónico es obligatorio.",
+  "validation_email_invalid": "Por favor, introduce una dirección de correo válida.",
+  "validation_password_required": "La contraseña es obligatoria.",
+  "validation_password_min": "La contraseña debe tener al menos 8 caracteres.",
+  "validation_confirm_password_required": "Por favor, confirma tu contraseña.",
+
+  "create_profile_title": "Completa Tu Perfil",
+  "create_profile_subtitle": "Cuéntanos un poco sobre ti",
+  "create_profile_button": "Crear Perfil",
+  "profile_created_success": "¡Perfil creado exitosamente!",
+  "profile_create_failed": "Error al crear el perfil. Por favor, inténtalo de nuevo.",
+  "profile_create_error": "Ocurrió un error. Por favor, inténtalo de nuevo.",
+
+  "first_name_placeholder": "Nombre",
+  "last_name_placeholder": "Apellido",
+  "username_placeholder": "Nombre de usuario",
+  "birth_date_placeholder": "Fecha de nacimiento (DD-MM-AAAA)",
+  "bio_placeholder": "Biografía (opcional)",
+
+  "validation_first_name_required": "El nombre es obligatorio.",
+  "validation_last_name_required": "El apellido es obligatorio.",
+  "validation_username_required": "El nombre de usuario es obligatorio.",
+  "validation_username_max": "El nombre de usuario debe tener como máximo 255 caracteres.",
+  "validation_birth_date_required": "La fecha de nacimiento es obligatoria.",
+  "validation_birth_date_future": "La fecha de nacimiento debe estar en el pasado.",
+  "validation_age_minimum": "Debes tener al menos 13 años.",
+
+  "logout": "Cerrar Sesión",
+  "logged_out": "Sesión cerrada exitosamente",
+  "dashboard": "Inicio",
+
+  "profile_confirm_title": "¿Estás seguro?",
+  "profile_confirm_message": "Una vez que crees tu perfil, no podrás cambiar tu nombre ni tu fecha de nacimiento de nuevo. Por favor, asegúrate de que todo esté correcto.",
+  "profile_confirm_yes": "Sí, Crear Perfil",
+  "profile_confirm_cancel": "Cancelar",
+
+  "scan_tab": "Escanear",
+  "scanner_permission_text": "Necesitamos permisos de Cámara y Ubicación para verificar que estás en el contenedor de reciclaje.",
+  "scanner_permission_camera": "Se requiere permiso de cámara para escanear códigos de barras.",
+  "grant_camera_permission": "Conceder Permiso de Cámara",
+  "grant_location_permission": "Conceder Permiso de Ubicación",
+  "scan_hint_idle": "Apunta al código QR y toca abajo",
+  "scan_hint_scanning": "Escaneando... Toca para cancelar",
+  "scan_hint_gps_disabled": "GPS Desactivado - No se puede escanear",
+  "scan_button": "ESCANEAR",
+  "scan_button_stop": "DETENER",
+  "location_services_disabled_title": "Servicios de Ubicación Desactivados",
+  "location_services_disabled_message": "Debes activar la ubicación de tu dispositivo (GPS) para verificar el contenedor.",
+  "open_settings": "Abrir Configuración",
+  "gps_error": "Error de GPS",
+  "gps_error_message": "Por favor, quédate quieto e inténtalo de nuevo.",
+  "weak_signal_title": "Señal Débil",
+  "weak_signal_message": "La precisión del GPS es baja. Por favor, espera un momento para obtener una mejor señal.",
+  "session_start_error": "Error al iniciar la sesión. Por favor, inténtalo de nuevo.",
+  "network_error": "Error de Red",
+  "network_error_message": "No se pudo verificar la ubicación del contenedor.",
+
+  "connected_to": "Conectado a:",
+  "session_expired_title": "Sesión Expirada",
+  "session_expired_message": "Tu tiempo en este contenedor ha terminado.",
+  "barcode_hint_idle": "Apunta al código de barras y toca abajo",
+  "barcode_hint_scanning": "Escaneando... Toca para cancelar",
+  "duplicate_warning": "¡Artículo duplicado! Toma una foto grupal para desbloquear.",
+  "duplicate_alert_title": "¡Duplicado Detectado!",
+  "duplicate_alert_text": "Toma una foto de TODOS los artículos juntos.",
+  "recycled_success": "Reciclado: {{item}}\n+{{points}} Puntos",
+  "recycled_pending": "Reciclado: {{item}}\n(Pendiente de Revisión)",
+  "photo_proof_required": "Se requiere foto de prueba.",
+  "submit_failed": "Error al enviar el artículo.",
+  "network_error_retry": "Error de red. Por favor, inténtalo de nuevo.",
+  "upload_unlock": "Subir y Desbloquear",
+  "proof_uploaded": "¡Prueba subida! Escaneo ilimitado desbloqueado.",
+  "upload_failed": "La subida falló.",
+  "upload_failed_retry": "La subida falló. Por favor, inténtalo de nuevo.",
+  "photo_capture_failed": "Error al capturar la foto.",
+  "ok": "OK",
+  "cancel": "Cancelar",
+  "session_ended_success": "Sesión finalizada.",
+  "session_end_failed": "Error al finalizar la sesión.",
+
+  "settings_tab": "Ajustes",
+  "settings_title": "Ajustes",
+
+  "settings_app_title": "Ajustes de la App",
+  "settings_theme": "Tema",
+  "settings_theme_light": "Claro",
+  "settings_theme_dark": "Oscuro",
+  "settings_theme_system": "Sistema",
+  "settings_language": "Idioma",
+
+  "settings_profile_title": "Editar Perfil",
+  "settings_username": "Nombre de usuario",
+  "settings_bio": "Biografía",
+  "settings_save_profile": "Guardar Perfil",
+
+  "settings_email_title": "Correo Electrónico",
+  "settings_change_email": "Cambiar",
+  "settings_new_email": "Nueva dirección de correo",
+  "settings_change_email_title": "Cambiar Correo",
+  "settings_submit": "Enviar",
+
+  "settings_password_title": "Contraseña",
+  "settings_change_password": "Cambiar Contraseña",
+  "settings_current_password": "Contraseña actual",
+  "settings_new_password": "Nueva contraseña",
+  "settings_confirm_new_password": "Confirmar nueva contraseña",
+
+  "settings_logout": "Cerrar Sesión",
+  "settings_logout_confirm_title": "Cerrar Sesión",
+  "settings_logout_confirm_message": "¿Estás seguro de que quieres cerrar sesión?",
+  "settings_confirm": "Sí",
+
+  "settings_delete_account": "Eliminar Cuenta",
+  "settings_delete_confirm_title": "Eliminar Cuenta",
+  "settings_delete_confirm_message": "Ingresa tu contraseña para eliminar permanentemente tu cuenta. Esta acción no se puede deshacer.",
+  "settings_delete_button": "Eliminar Mi Cuenta"
 }
